# spark

./: .gitignore  XMLLOG  appveyor.yml  build.sh  compile.sh  hadoop_env.sh  hadoop_install.sh  lib_install.sh  pi.py  pmixsrv.env  pom.xml
.devcontainer/: devcontainer.json  docker-compose.yml
.metals/: metals.h2.db
.run/: RunBesh.run.xml  SparkTest-yoga.run.xml  SparkTest.run.xml  spark-core_2.12 [package].run.xml  spark-examples_2.12 [install].run.xml  spark-examples_2.12 [package].run.xml
R/pkg/R/: sparkR.R
assembly/: pom.xml
blaze/: pmixsrv.env  pom.xml
blaze/dev/create-release/: releaseutils.py
blaze/src/main/java/org/apache/spark/blaze/: MPILauncher.java  MpiRun.java  NativeUtils.java  Util.java
blaze/src/main/native/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  null.d
blaze/src/main/native/jni/: CMakeLists.txt  org_apache_spark_blaze_NativeUtils.c  org_apache_spark_blaze_NativeUtils.cc  org_apache_spark_blaze_NativeUtils.h
blaze/src/main/native/openpmix_b/src/tools/pattrs/: pattrs.1
blaze/src/main/native/openpmix_b/src/tools/pevent/: pevent.1
blaze/src/main/native/openpmix_b/src/tools/plookup/: plookup.1
blaze/src/main/native/openpmix_b/src/tools/pps/: pps.1
blaze/src/main/native/openpmix_b/src/tools/pquery/: pquery.1
blaze/src/main/native/prrte_b/src/tools/prte/: CMakeLists.txt  hello.c  org_apache_spark_blaze_MPILauncher.c  org_apache_spark_blaze_MPILauncher.h  prte.c
blaze/src/main/native/prrte_bb/: CMakeLists.txt  env.sh
blaze/src/main/native/prrte_bb/src/tools/prte/: CMakeLists.txt  org_apache_spark_blaze_MPILauncher.c  org_apache_spark_blaze_MPILauncher.h  prun.c
blaze/src/main/native/rank_file/: Makefile  Makefile.in  libmca_rmaps_rank_file.la  rmaps_rank_file_lex.c
blaze/src/main/native/rank_file/.deps/: rmaps_rank_file.Plo  rmaps_rank_file_component.Plo  rmaps_rank_file_lex.Plo
blaze/src/main/native/src/blaze/: CMakeLists.txt  Makefile  cmake_install.cmake  org_apache_spark_blaze_deploy_mpi_NativeUtils.c  org_apache_spark_blaze_deploy_mpi_NativeUtils.h  org_apache_spark_mpi_NativeUtil.c  org_apache_spark_util_mpi.h  prte_environ.c  prun.c
blaze/src/main/native/src/blaze/include/: pmix_internal.h  prun.c
blaze/src/main/native/src/pmix/: CMakeLists.txt  Makefile  cmake_install.cmake
blaze/src/main/native/src/pmix/include/: odls_blaze.h  rmaps_blaze.h  rmaps_blaze_lex.h  rmaps_rankfile.h  rmaps_rankfile_lex.h
blaze/src/main/native/src/pmix/prte/mca/odls/blaze/: odls_blaze_component.c  odls_blaze_module.c
blaze/src/main/native/src/pmix/prte/mca/odls/sparkmpi/: odls_sparkmpi_component.c  odls_sparkmpi_module.c
blaze/src/main/native/src/pmix/prte/mca/rmaps/blaze/: help-rmaps_blaze.txt  rmaps_blaze.c  rmaps_blaze_component.c  rmaps_blaze_lex.c
blaze/src/main/native/src/pmix/prte/mca/rmaps/rankfile/: rmaps_rankfile.c  rmaps_rankfile_component.c  rmaps_rankfile_lex.c
blaze/src/main/native/test/: .gdb_history  CMakeLists.txt  Makefile  a.out  client.c  cmake_install.cmake  hello.c  hello0  hello0.c  hello1  hello1.c  hello2  hello2.c  hello3  hello3.c  prte  prte_environ.c  prte_test.c  prun_test  prun_test.c  tool.c  tool.h
blaze/src/main/scala/: MPIPi.scala
blaze/src/main/scala/org/apache/spark/: BlazeContext.scala  BlazeSession.scala
blaze/src/main/scala/org/apache/spark/blaze/: BlazeSession.scala  BlazeUtils.scala  JavaWrapper.scala  SharedState.scala
blaze/src/main/scala/org/apache/spark/deploy/: BlazeMaster.scala
blaze/src/main/scala/org/apache/spark/examples/: JavaMPIPi.java  MPIP1.scala  MPIPi.scala  SparkP1.scala  SparkPi.scala
blaze/src/main/scala/org/apache/spark/executor/: BlazeExecutor.scala  BlazeExecutorBackend.scala
blaze/src/test/scala/org/apache/spark/examples/: MPIPi.scala
conf/: spark-env.sh.template  workers
core/: pom.xml
core/src/main/native/: CMakeLists.txt
core/src/main/native/src/blaze/: org_apache_spark_blaze_deploy_mpi_NativeUtils.c  org_apache_spark_blaze_deploy_mpi_NativeUtils.cc  org_apache_spark_blaze_deploy_mpi_NativeUtils.h  org_apache_spark_mpi_NativeUtil.c  org_apache_spark_mpi_NativeUtil.h
core/src/main/native/src/blaze/include/: prte_config.h
core/src/main/native/src/pmix/include/: odls_blaze.h
core/src/main/native/test/: CMakeLists.txt
core/src/main/scala/org/apache/spark/: BlazeContext.scala  BlazeSession.scala  ContextCleaner.scala  Dependency.scala  SparkContext.scala
core/src/main/scala/org/apache/spark/deploy/: Client.scala  FaultToleranceTest.scala  LocalSparkCluster.scala  SparkSubmit.scala  SparkSubmitArguments.scala
core/src/main/scala/org/apache/spark/examples/: MPIPi.scala  MPIPi1.scala  SparkPi.scala
core/src/test/: A.h  org_A.h
core/src/test/org/: A.scala
core/src/test/resources/: log4j.properties
core/src/test/resources/spark-events/: app-20161115172038-0000  app-20161116163331-0000  app-20180109111548-0000  application_1516285256255_0012  application_1553914137147_0018  application_1555004656427_0144  local-1422981759269  local-1422981780767  local-1425081759269  local-1426533911241  local-1426633911242  local-1430917381534  local-1430917381535_1  local-1430917381535_2
dev/: change-scala-version.sh  make-distribution.sh
dev/create-release/: do-release-docker.sh  release-tag.sh  releaseutils.py
docs/: configuration.md  index.md  job-scheduling.md  monitoring.md  running-on-kubernetes.md  running-on-mesos.md  running-on-yarn.md  security.md  spark-standalone.md  streaming-programming-guide.md  submitting-applications.md
examples/: pom.xml
project/: MimaExcludes.scala  SparkBuild.scala
python/example/: pi.py
python/pyspark/: rdd.py  rdd.pyi
python/pyspark/ml/param/: __init__.py
python/pyspark/sql/avro/: functions.py
python/pyspark/sql/tests/: test_dataframe.py
python/pyspark/tests/: test_worker.py
resource-managers/kubernetes/integration-tests/: README.md  pom.xml
resource-managers/kubernetes/integration-tests/scripts/: setup-integration-test-env.sh
sbin/: pmixsrv.env  spark-config.sh  start-master.sh  start-slave.sh  stop-master.sh
tmp/: pipe.scala
tools/: pom.xml
(+299 files in other folders)
