project(mpilauncher)
cmake_minimum_required(VERSION 3.17)

#aux_source_directory(. PRTE_SRC)
set(PRRTE /home/xialb/opt/spark/blaze/src/main/native/prrte)
set(PMIX /opt/deps/openpmix)
set(PRTE_SRC ${PRRTE}/src/tools/prun/prun.c ${PRRTE}/src/prted/prte.c )
set(SRC org_apache_spark_blaze_NativeUtils.c org_apache_spark_blaze_NativeUtils.cc)
include_directories(${PRRTE} ${PRRTE}/include ${PRRTE}/src/include  ${PRRTE}/src/tools/prun ${PRRTE}/src/tools/prte)
include_directories(${PMIX}/include)
include_directories(/usr/lib/jvm/java-8-openjdk/include /usr/lib/jvm/java-8-openjdk/include/linux)

link_directories("/opt/deps/openpmix/lib" "/opt/deps/prrte/lib" "/usr/lib")
link_libraries("/opt/deps/openpmix/lib/libpmix.so")
link_libraries("/opt/deps/prrte/lib/libprrte.so")
link_libraries("/usr/lib/libevent_core-2.1.so.7")
#link_libraries("/usr/lib/libevent_pthreads-2.1.so.7")
#link_libraries("/usr/lib/libpthread.so.0" "/opt/deps/libevent/libevent_core-2.0.so.5")

add_library(blaze SHARED ${PRTE_SRC} ${SRC})
target_link_libraries(blaze pmix prrte)