project(blaze)
cmake_minimum_required(VERSION 2.8)

#aux_source_directory(. PRTE_SRC)
set(PRRTE /opt/deps/prrte)
set(PMIX /opt/deps/openpmix)
set(PRRTE_SRC  /docker/git/ompi/3rd-party/prrte/)

#set(PRTE_SRC ${PRRTE}/src/tools/prun/prun.c ${PRRTE}/src/prted/prte.c )
set(SRC org_apache_spark_blaze_deploy_mpi_NativeUtils.c org_apache_spark_blaze_deploy_mpi_NativeUtils.cc include/prun.c include/pmix_internal.h)
set(CORE_SRC org_apache_spark_mpi_NativeUtil.h org_apache_spark_mpi_NativeUtil.c)
include_directories(${PRRTE} ${PRRTE}/include ${PRRTE_SRC} ${PRRTE_SRC}/src/include)
include_directories(${PMIX}/include)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(/usr/lib/jvm/java-8-openjdk/include /usr/lib/jvm/java-8-openjdk/include/linux)

link_directories("/opt/deps/openpmix/lib" "/opt/deps/prrte/lib" "/usr/lib")
link_libraries("/opt/deps/openpmix/lib/libpmix.so")
link_libraries("/opt/deps/prrte/lib/libprrte.so")
link_libraries("/usr/lib/libevent_core-2.1.so.7")
#link_libraries("/usr/lib/libevent_pthreads-2.1.so.7")
#link_libraries("/usr/lib/libpthread.so.0" "/opt/deps/libevent/libevent_core-2.0.so.5")

#add_library(blaze SHARED ${PRTE_SRC} ${SRC})
add_library(blaze SHARED ${SRC} ${CORE_SRC})
target_link_libraries(blaze pmix prrte)
